--- a/.github/workflows/buildx-vce-tm129-content.yaml
+++ b/.github/workflows/buildx-vce-tm129-content.yaml
@@ -32,8 +32,7 @@ jobs:
 
       - name: Get content
         run: |
-          wget -P downloads https://github.com/innovationOUtside/tm129-robotics2020/archive/master.zip && \
-          unzip -oq downloads/master.zip tm129-robotics2020-master/content/* -d downloads/
+          wget -P downloads https://github.com/innovationOUtside/tm129-robotics2020/archive/master.zip
           
       # Build the images, without pushing
       # When I can build linux/arm64 wheels, add that to build
