--- a/tm129-content/Dockerfile
+++ b/tm129-content/Dockerfile
@@ -8,7 +8,8 @@ WORKDIR $HOME
           
 # COPY downloads/tm129-robotics2020-master/content ./content/
 #RUN wget -P downloads https://github.com/innovationOUtside/tm129-robotics2020/archive/master.zip && \
-RUN --mount=type=bind,target=./downloads/master.zip,source=downloads/master.zip  unzip -oq downloads/master.zip tm129-robotics2020-master/content/* -d downloads/ && \
+#RUN --mount=type=bind,target=./downloads/master.zip,source=downloads/master.zip  unzip -oq downloads/master.zip tm129-robotics2020-master/content/* -d downloads/ && \
+RUN wget -P downloads https://github.com/innovationOUtside/tm129-robotics2020/archive/master.zip && \
     mv downloads/tm129-robotics2020-master/content/ content/ && \
     rm -r downloads && chown -R $NB_USER content
 
