--- a/tm129-content/Dockerfile
+++ b/tm129-content/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR $HOME
 #RUN wget -P downloads https://github.com/innovationOUtside/tm129-robotics2020/archive/master.zip && \
 #RUN --mount=type=bind,target=./downloads/master.zip,source=downloads/master.zip  unzip -oq downloads/master.zip tm129-robotics2020-master/content/* -d downloads/ && \
 RUN wget -P downloads https://github.com/innovationOUtside/tm129-robotics2020/archive/master.zip && \
+    unzip -oq downloads/master.zip tm129-robotics2020-master/content/* -d downloads/ && \
     mv downloads/tm129-robotics2020-master/content/ content/ && \
     rm -r downloads && chown -R $NB_USER content
 
