Update action names

--- a/.github/workflows/buildx-base.yml
+++ b/.github/workflows/buildx-base.yml
@@ -13,7 +13,7 @@ on:
         description: 'Push to dockerhub'
 
 jobs:
-  buildx:
+  buildx_base:
     runs-on: ubuntu-latest
     steps:
       # Get the repositery's code
