--- a/.github/workflows/buildx-tm351.yml
+++ b/.github/workflows/buildx-tm351.yml
@@ -13,7 +13,7 @@ on:
         description: 'Push to dockerhub'
 
 jobs:
-  buildx:
+  buildx_tm351:
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
