--- a/.github/workflows/buildx-vce-tm129-content.yaml
+++ b/.github/workflows/buildx-vce-tm129-content.yaml
@@ -13,7 +13,7 @@ on:
         description: 'Push to dockerhub'
 
 jobs:
-  buildx:
+  buildx_vce_tm129_content:
     runs-on: ubuntu-latest
     steps:
       # Get the repositery's code
