--- a/.github/workflows/buildx-vce-tm129.yml
+++ b/.github/workflows/buildx-vce-tm129.yml
@@ -13,7 +13,7 @@ on:
         description: 'Push to dockerhub'
 
 jobs:
-  buildx:
+  buildx_vce_tm129:
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
