--- a/vce-notebook/Dockerfile
+++ b/vce-notebook/Dockerfile
@@ -9,6 +9,7 @@ USER root
 
 # Install Python 3 packages
 #COPY ./wheelhouse/ ./wheelhouse
+#RUN echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
 # If we add wheels for every platform, we can add --no-index
 # What needs numpy & matplotlib?
 # For the --mount we also need the py3.8 wheels if we have --no-index
