--- a/tm351-notebook/Dockerfile
+++ b/tm351-notebook/Dockerfile
@@ -9,9 +9,9 @@ RUN apt-get update -y && apt-get install -y libproj-dev \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY ./wheelhouse/ ./wheelhouse/
-# Raspbian buster only supports pytpo to 5.2
+# Raspbian buster only supports proj to 5.2
 # so need to retrogade some other geo packages
-# If we add wheels for every platfrom, we can add --no-index
+# If we add wheels for every platform, we can add --no-index
 RUN echo regex lxml pyproj==1.9.6 fiona shapely nltk multidict yarl aiohttp psycopg2-binary psycopg2 SQLAlchemy PyYAML pymongo | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
 
 USER $NB_USER
