--- a/.github/workflows/buildx-tm351-jh.yml
+++ b/.github/workflows/buildx-tm351-jh.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm351:${GITHUB_SHA::7} \
+            --platform linux/amd64 \
+            -t ouvocl/vce-tm351-jh:${GITHUB_SHA::7} \
             ./tm351-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -47,12 +47,12 @@ jobs:
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm351:${GITHUB_SHA::7} \
+            --platform linux/amd64 \
+            -t ouvocl/vce-tm351-jh:${GITHUB_SHA::7} \
             ./tm351-notebook \
             --push
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm351:latest \
+            --platform linux/amd64 \
+            -t ouvocl/vce-tm351-jh:latest \
             ./tm351-notebook \
             --push
