Fix workflow path

--- a/.github/workflows/buildx-tm351-jh.yml
+++ b/.github/workflows/buildx-tm351-jh.yml
@@ -39,7 +39,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             -t ouvocl/vce-tm351-jh:${GITHUB_SHA::7} \
-            ./tm351-notebook
+            ./tm351-notebook-jh
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -49,10 +49,10 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             -t ouvocl/vce-tm351-jh:${GITHUB_SHA::7} \
-            ./tm351-notebook \
+            ./tm351-notebook-jh \
             --push
           docker buildx build \
             --platform linux/amd64 \
             -t ouvocl/vce-tm351-jh:latest \
-            ./tm351-notebook \
+            ./tm351-notebook-jh \
             --push
