--- a/.github/workflows/buildx-vce-tm351.yml
+++ b/.github/workflows/buildx-vce-tm351.yml
@@ -1,4 +1,4 @@
-name: buildx-tm351
+name: buildx-vce-tm351
 # Via: https://www.padok.fr/en/blog/multi-architectures-docker-iot
 on:
   release:
@@ -13,7 +13,7 @@ on:
         description: 'Push to dockerhub'
 
 jobs:
-  buildx_tm351:
+  buildx_vce_tm351:
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
