Dockerfile base notebook -mount don;t copy wheelhouse

--- a/base-notebook/Dockerfile
+++ b/base-notebook/Dockerfile
@@ -77,13 +77,13 @@ WORKDIR $HOME
 # Correct permissions
 # Do all this in a single RUN command to avoid duplicating all of the
 # files across image layers when the permissions change
-COPY ./wheelhouse/ /home/$NB_USER/wheelhouse/
+#COPY ./wheelhouse/ /home/$NB_USER/wheelhouse/
 # If we add wheels for every platform, we can add --no-index
-RUN echo pyzmq | xargs -n 1 pip install --find-links=/home/$NB_USER/wheelhouse && \
+RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo pyzmq | xargs -n 1 pip install --find-links=/home/$NB_USER/wheelhouse && \
     pip install --quiet --upgrade notebook jupyterlab && \
     rm -rf /home/$NB_USER/.cache/yarn && \
-    fix-permissions /home/$NB_USER && \
-    rm -r /home/$NB_USER/wheelhouse
+    fix-permissions /home/$NB_USER
+    #rm -r /home/$NB_USER/wheelhouse
 
 USER $NB_UID
 
