--- a/vce-notebook/Dockerfile
+++ b/vce-notebook/Dockerfile
@@ -6,7 +6,6 @@ LABEL maintainer="Tony Hirst <tony.hirst@open.ac.uk>"
 
 USER root
 
-
 # Install Python 3 packages
 #COPY ./wheelhouse/ ./wheelhouse
 #RUN echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
@@ -14,7 +13,8 @@ USER root
 # What needs numpy & matplotlib?
 # For the --mount we also need the py3.8 wheels if we have --no-index
 #RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --no-cache --find-links=./wheelhouse  
-RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --find-links=./wheelhouse 
+#RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --find-links=./wheelhouse 
+RUN echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --find-links=https://opencomputinglab.github.io/vce-wheelhouse
 
 RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'cython' \
@@ -37,7 +37,7 @@ RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'nb-cell-execution-status' \
     'nbsearch'
 
-USER root
+#USER root
 COPY postBuild ./postBuild
 RUN chmod ugo+x ./postBuild
 RUN ./postBuild 
