--- a/vce-notebook/Dockerfile
+++ b/vce-notebook/Dockerfile
@@ -14,7 +14,7 @@ USER root
 # For the --mount we also need the py3.8 wheels if we have --no-index
 #RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --no-cache --find-links=./wheelhouse  
 #RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --find-links=./wheelhouse 
-RUN echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --find-links=https://opencomputinglab.github.io/vce-wheelhouse
+RUN echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --no-cache --find-links=https://opencomputinglab.github.io/vce-wheelhouse
 
 RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'cython' \
