--- a/.github/workflows/buildx-base-py39.yml
+++ b/.github/workflows/buildx-base-py39.yml
@@ -13,7 +13,7 @@ on:
         description: 'Push to dockerhub'
 
 jobs:
-  buildx:
+  buildx_py39:
     runs-on: ubuntu-latest
     timeout-minutes: 720
     steps:
