--- a/.github/workflows/buildx-base-py39.yml
+++ b/.github/workflows/buildx-base-py39.yml
@@ -38,7 +38,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/base-py39:${GITHUB_SHA::7} \
-            .
+            ./base-python-39
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -48,10 +48,10 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/base-py39:${GITHUB_SHA::7} \
-            . \
+            ./base-python-39 \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/base-py39:latest \
-            . \
+            ./base-python-39 \
             --push
