--- a/base-python-39/Dockerfile
+++ b/base-python-39/Dockerfile
@@ -6,3 +6,6 @@ ARG PROCESSOR_FAMILY=x86_64
 ENV PROCESSOR_FAMILY=${PROCESSOR_FAMILY}
 
 # Create a base Python environment on which to build other images
+
+RUN apt-get update && apt-get instll -y python3-pip && \
+    python3 -m pip install --upgrade pip
