--- a/base-python-39/Dockerfile
+++ b/base-python-39/Dockerfile
@@ -11,4 +11,5 @@ ENV PROCESSOR_FAMILY=${PROCESSOR_FAMILY}
 
 # Create a base Python environment on which to build other images
 
-RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3.9 get-pip.py
+RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py 
+RUN python3.9 get-pip.py
