--- a/.github/workflows/buildx-vce-tm351.yml
+++ b/.github/workflows/buildx-vce-tm351.yml
@@ -34,10 +34,11 @@ jobs:
 
       # Build the images, without pushing
       # When I can build linux/arm64 wheels, add that to build
+      # TO DO - removed linux/arm/v7 for now due to pyproj old dependency
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
+            --platform linux/amd64,linux/arm64 \
             -t ouvocl/vce-tm351:${GITHUB_SHA::7} \
             ./tm351-notebook
       - name: Login to DockerHub
@@ -47,12 +48,12 @@ jobs:
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
+            --platform linux/amd64,linux/arm64 \
             -t ouvocl/vce-tm351:${GITHUB_SHA::7} \
             ./tm351-notebook \
             --push
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
+            --platform linux/amd64,linux/arm64 \
             -t ouvocl/vce-tm351:latest \
             ./tm351-notebook \
             --push
