--- a/tm351-notebook/Dockerfile
+++ b/tm351-notebook/Dockerfile
@@ -12,11 +12,11 @@ RUN apt-get update && apt-get install -y libproj-dev \
 
 #COPY ./wheelhouse/ ./wheelhouse/
 # Raspbian buster only supports proj to 5.2
-# so need to retrogade some other geo packages
+# so need to retrogade some other geo packages eg geopandas==0.5.1
 # If we add wheels for every platform, we can add --no-index
 # Earlier version: pyproj==1.9.6
 RUN echo PyICU regex lxml pyproj fiona shapely nltk multidict yarl aiohttp psycopg2-binary psycopg2 SQLAlchemy PyYAML pymongo | xargs -n 1 pip install --no-cache --find-links=https://opencomputinglab.github.io/vce-wheelhouse
 
-RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple geopandas==0.5.1 && pip install --no-cache --extra-index-url=https://www.piwheels.org/simple ou-tm351-py
+RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple geopandas && pip install --no-cache --extra-index-url=https://www.piwheels.org/simple ou-tm351-py
 
 USER $NB_USER
