--- a/tm351-notebook/Dockerfile
+++ b/tm351-notebook/Dockerfile
@@ -16,7 +16,8 @@ RUN apt-get update && apt-get install -y libproj-dev \
 # no pynacl wheel for RPi32 either
 # If we add wheels for every platform, we can add --no-index
 # Earlier version: pyproj==1.9.6
-RUN echo PyICU pynacl regex lxml pyproj fiona shapely nltk multidict yarl aiohttp psycopg2-binary psycopg2 SQLAlchemy PyYAML pymongo | xargs -n 1 pip install --no-cache --find-links=https://opencomputinglab.github.io/vce-wheelhouse
+RUN echo psycopg2-binary | xargs -n 1 pip install --no-cache --find-links=https://opencomputinglab.github.io/vce-wheelhouse && \
+    echo PyICU pynacl regex lxml pyproj fiona shapely nltk multidict yarl aiohttp psycopg2 SQLAlchemy PyYAML pymongo | xargs -n 1 pip install --no-cache --find-links=https://opencomputinglab.github.io/vce-wheelhouse
 
 RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple geopandas && pip install --no-cache --extra-index-url=https://www.piwheels.org/simple ou-tm351-py
 
