Move py base to ubuntu

--- a/base-python-39/Dockerfile
+++ b/base-python-39/Dockerfile
@@ -1,8 +1,17 @@
-ARG BASE_IMAGE=python:3.9 
-# Uses debian buster
+ARG BASE_IMAGE=ubuntu:20.04
 FROM ${BASE_IMAGE}
+RUN apt-get update && \
+    apt-get install -y bash-completion vim curl zip unzip bzip2 wget && \
+    apt-get install -y build-essential gcc && \
+    apt-get install -y libatlas-base-dev libfreetype6-dev libpng-dev libhdf5-serial-dev && \
+    apt-get install -y python3.9 python3.9-dev python3-distutils
 
 ARG PROCESSOR_FAMILY=x86_64
 ENV PROCESSOR_FAMILY=${PROCESSOR_FAMILY}
 
 # Create a base Python environment on which to build other images
+
+RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
+    python3.9 get-pip.py
+
+RUN ln -s /usr/bin/python3.9 /usr/bin/python
