--- a/tm351-notebook/Dockerfile
+++ b/tm351-notebook/Dockerfile
@@ -8,6 +8,7 @@ USER root
 RUN apt-get update && apt-get install -y libproj-dev \
   gdal-bin \
   libgdal-dev \
+  libicu-dev \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 #COPY ./wheelhouse/ ./wheelhouse/
