--- a/.github/workflows/buildx-pandas.yml
+++ b/.github/workflows/buildx-pandas.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Build the images, without pushing
       # When I can build linux/arm64 wheels, add that to build
-      - name: Run Buildx
+      - name: Run Buildx linux/amd64
         run: |
           docker buildx build \
             --platform linux/amd64 \
@@ -42,7 +42,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       # Reusing the cache, push the images
-      - name: Run Buildx
+      - name: Push linux/amd64
         run: |
           docker buildx build \
             --platform linux/amd64 \
@@ -56,7 +56,8 @@ jobs:
             --push
           docker rmi -f ouvocl/jupyter-pandas:${GITHUB_SHA::7}
           docker rmi -f ouvocl/jupyter-pandas:latest
-
+      - name: Build and push linux/arm64
+        run: |
           docker buildx build \
             --platform linux/arm64 \
             -t ouvocl/jupyter-pandas:${GITHUB_SHA::7} \
@@ -69,7 +70,8 @@ jobs:
             --push
           docker rmi -f ouvocl/jupyter-pandas:${GITHUB_SHA::7}
           docker rmi -f ouvocl/jupyter-pandas:latest
-
+      - name: Build and push linux/arm7
+        run: |
           docker buildx build \
             --platform linux/arm/v7 \
             -t ouvocl/jupyter-pandas:${GITHUB_SHA::7} \
