--- a/pandas-notebook/Dockerfile.arm32
+++ b/pandas-notebook/Dockerfile.arm32
@@ -38,7 +38,7 @@ RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
 # This errors in RPi32 - but is that because of a Github Action memory issue?!
 ENV XDG_CACHE_HOME="/home/${NB_USER}/.cache/"
 #Why does this not run in RPi32?
-RUN MPLBACKEND=Agg python3 -c "import matplotlib.pyplot" &>/dev/null
+#RUN MPLBACKEND=Agg python3 -c "import matplotlib.pyplot" &>/dev/null
 
 # Activate ipywidgets extension in the environment that runs the notebook server
 RUN fix-permissions "/home/${NB_USER}" && jupyter nbextension enable --py widgetsnbextension --user
