--- a/.github/workflows/buildx-vce-pandas.yml
+++ b/.github/workflows/buildx-vce-pandas.yml
@@ -31,10 +31,10 @@ jobs:
         run: echo ${{ steps.buildx.outputs.platforms }}
 
       # Build the images, without pushing
-      - name: Run Buildx
+      - name: Run Buildx linux/amd64
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
+            --platform linux/amd64 \
             -t ouvocl/vce-pandas:${GITHUB_SHA::7} \
             --build-arg BASE_IMAGE=ouvocl/vce-notebook \
             ./pandas-notebook
@@ -42,17 +42,51 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       # Reusing the cache, push the images
-      - name: Run Buildx
+      - name: Push linux/amd64
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
+            --platform linux/amd64 \
             -t ouvocl/vce-pandas:${GITHUB_SHA::7} \
             --build-arg BASE_IMAGE=ouvocl/vce-notebook \
             ./pandas-notebook \
             --push
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
+            --platform linux/amd64 \
             -t ouvocl/vce-pandas:latest \
             --build-arg BASE_IMAGE=ouvocl/vce-notebook \
             ./pandas-notebook \
             --push
+          docker rmi -f ouvocl/vce-pandas:${GITHUB_SHA::7}
+          docker rmi -f ouvocl/vce-pandas:latest
+      - name: Build and push linux/arm64
+        run: |
+          docker buildx build \
+            --platform linux/arm64 \
+            -t ouvocl/vce-pandas:${GITHUB_SHA::7} \
+            --build-arg BASE_IMAGE=ouvocl/vce-notebook \
+            ./pandas-notebook \
+            --push
+          docker buildx build \
+            --platform linux/arm64 \
+            -t ouvocl/vce-pandas:latest \
+            ./pandas-notebook \
+            --push
+          docker rmi -f ouvocl/vce-pandas:${GITHUB_SHA::7}
+          docker rmi -f ouvocl/vce-pandas:latest
+      - name: Build and push linux/arm7
+        run: |
+          docker buildx build \
+            --platform linux/arm/v7 \
+            -t ouvocl/vce-pandas:${GITHUB_SHA::7} \
+             -f ./pandas-notebook/Dockerfile.arm32 \
+             --build-arg BASE_IMAGE=ouvocl/vce-notebook \
+            ./pandas-notebook \
+            --push
+          docker buildx build \
+            --platform linux/arm/v7 \
+            -t ouvocl/vce-pandas:latest \
+            -f ./pandas-notebook/Dockerfile.arm32 \
+            --build-arg BASE_IMAGE=ouvocl/vce-notebook \
+            ./pandas-notebook \
+            --push
+
