giving up on monolithic buildx for arm64

--- a/.github/workflows/buildx-vce-tm351-monolith.yml
+++ b/.github/workflows/buildx-vce-tm351-monolith.yml
@@ -34,10 +34,11 @@ jobs:
 
       # Build the images, without pushing
       # When I can build linux/arm64 wheels, add that to build
+      # Not working on ,linux/arm64 for some reason - can't find postgresql?
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+            --platform linux/amd64 \
             -t ouvocl/vce-tm351-monolith:${GITHUB_SHA::7} \
             ./tm351-monolith
       - name: Login to DockerHub
@@ -47,12 +48,12 @@ jobs:
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+            --platform linux/amd64 \
             -t ouvocl/vce-tm351-monolith:${GITHUB_SHA::7} \
             ./tm351-monolith \
             --push
           docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+            --platform linux/amd64 \
             -t ouvocl/vce-tm351-monolith:latest \
             ./tm351-monolith \
             --push
